created domain model, services and controller